# ChangeLog for sec-policy/selinux-amavis
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-amavis/ChangeLog,v 1.5 2011/11/12 20:53:40 swift Exp $

  12 Nov 2011; <swift@gentoo.org> -selinux-amavis-2.20101213.ebuild:
  Removing old policies

  23 Oct 2011; <swift@gentoo.org> selinux-amavis-2.20110726.ebuild:
  Stabilization (tracker #384231)

*selinux-amavis-2.20110726 (28 Aug 2011)

  28 Aug 2011; <swift@gentoo.org> +selinux-amavis-2.20110726.ebuild:
  Updating policy builds to refpolicy 20110726

  02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  selinux-amavis-2.20101213.ebuild:
  Stable amd64 x86

  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Initial commit to portage.

  01 Jan 2011; Chris Richards <gizmo@www.giz-works.com>
  +selinux-amavis-2.20101213.ebuild, +metadata.xml:
  New upstream release

*selinux-amavis-2.20101213 (01 Jan 2011)

  01 Jan 2011; Chris Richards <gizmo@www.giz-works.com>
  +selinux-amavis-2.20101213.ebuild, +metadata.xml:
  Initial commit
