@@ -1,6 +1,11 @@
 # ChangeLog for sec-policy/selinux-amavis
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-amavis/ChangeLog,v 1.5 2011/11/12 20:53:40 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-amavis/ChangeLog,v 1.6 2011/11/15 10:43:53 swift Exp $
+
+*selinux-amavis-2.20110726-r1 (15 Nov 2011)
+
+  15 Nov 2011; <swift@gentoo.org> +selinux-amavis-2.20110726-r1.ebuild:
+  Fix file context for amavis configuration file
 
   12 Nov 2011; <swift@gentoo.org> -selinux-amavis-2.20101213.ebuild:
   Removing old policies
